Changing pattern to be less common

--- a/chopchop.yml
+++ b/chopchop.yml
@@ -121,7 +121,7 @@ plugins:
       - name: Git exposed
         status_code: 200
         match:
-          - "["
+          - "[branch"
         remediation: Do not deploy .git folder on production servers
         description: Verifies that the GIT repository is accessible from the site
         severity: "High"
