--- a/chopchop.yml
+++ b/chopchop.yml
@@ -119,8 +119,12 @@ plugins:
   - uri: "/.git/config"
     checks:
       - name: Git exposed
+        status_code: 200
         match:
-          - "["
+          - "[branch"
+          - "[remote"
+          - "[core]"
+          - "[user]"
         remediation: Do not deploy .git folder on production servers
         description: Verifies that the GIT repository is accessible from the site
         severity: "High"
