--- a/chopchop.yml
+++ b/chopchop.yml
@@ -373,3 +373,17 @@ plugins:
         remediation: Make sure that F5 BIG-IP - TMUI access is monitored
         description: Verifies that under /tmui a F5 BIG-IP TMUI is not accessible
         severity: "Low"
+  - uri: "/images/imgpaper.png"
+    checks:
+      - name : Trickbot Trojan Payload imgpaper.png
+        remediation: Make sure your system is'nt compromised
+        description: Possible Trickbot Trojan Payload hosting in /images/imgpaper.png
+        status_code: 200
+        severity: "High"
+  - uri: "/images/cursor.png"
+    checks:
+      - name : Trickbot Trojan Payload cursor.png
+        remediation: Make sure your system is'nt compromised
+        description: Possible Trickbot Trojan Payload hosting in /images/cursor.png
+        status_code: 200
+        severity: "High"
