--- a/chopchop.yml
+++ b/chopchop.yml
@@ -375,15 +375,29 @@ plugins:
         severity: "Low"
   - uri: "/images/imgpaper.png"
     checks:
-      - name : Trickbot Trojan Payload imgpaper.png
+      - name : Possible Trickbot Trojan Payload hosting imgpaper.png
         remediation: Make sure your system is'nt compromised
         description: Possible Trickbot Trojan Payload hosting in /images/imgpaper.png
         status_code: 200
         severity: "High"
   - uri: "/images/cursor.png"
     checks:
-      - name : Trickbot Trojan Payload cursor.png
+      - name : Possible Trickbot Trojan Payload hosting cursor.png
         remediation: Make sure your system is'nt compromised
         description: Possible Trickbot Trojan Payload hosting in /images/cursor.png
+        status_code: 200
+        severity: "High"
+  - uri: "/images/redcar.png"
+    checks:
+      - name : Possible Trickbot Trojan Payload hosting redcar.png
+        remediation: Make sure your system is'nt compromised
+        description: Possible Trickbot Trojan Payload hosting in /images/redcar.png
+        status_code: 200
+        severity: "High"
+  - uri: "/ico/VidT6cErs"
+    checks:
+      - name : Possible Trickbot Trojan Payload hosting VidT6cErs
+        remediation: Make sure your system is'nt compromised
+        description: Possible Trickbot Trojan Payload hosting in /ico/VidT6cErs
         status_code: 200
         severity: "High"
