--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,15 @@ jobs:
       run: go get github.com/mitchellh/gox
     - name: Build using gox
       run: gox -ldflags "-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE" -output "dist/ChopChop_{{.OS}}_{{.Arch}}"
+    - name: Upload ChopChop builds
+      uses: actions/upload-artifact@v2
+      with:
+        name: chopchop-artifacts
+        path: dist/*
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
       env:
-        GHR_COMPRESS: xz
+        GHR_COMPRESS: gz
         GHR_PATH: dist/
         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
